<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@android:color/background_light"
    tools:context="net.androidbootcamp.cravenittoolbox.Third">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="200dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        app:srcCompat="@drawable/knightstandingsmall"
        android:layout_below="@+id/textView3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/directory"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="25dp"
        android:paddingLeft="10dp"
        android:text="@string/security_638_7261"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="18dp"
        android:paddingLeft="10dp"
        android:text="@string/bambi_638_7317"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView10"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:text="@string/jerry_638_7352"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView12"
        android:layout_marginTop="19dp"
        android:paddingLeft="10dp"
        android:text="@string/jonathan_672_7508"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="false"
        android:layout_below="@+id/textView7"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:text="@string/elaine_638_7323"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView8"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:text="@string/deborah_638_7264"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView9"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:text="@string/tammy_635_3773"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:text="@string/fieldtechs_636_5136"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="19dp"
        android:paddingLeft="10dp"
        android:text="@string/matt_638_7245"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>
